--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="refresh" content="3600" >
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Kontor Spill</title>
   </head>
   <body>
